Partial Cherry-pick of #886 from anomaly-detection and Additional Adjustments (#914)
This commit includes a partial cherry-pick of https://github.com/opensearch-project/anomaly-detection/pull/886 along with other necessary changes for compatibility with the 2.8 branch.

The cherry-picked changes from the anomaly-detection repository's main branch are not identical due to differences between the main and 2.8 branches. Specifically, the changes in https://github.com/opensearch-project/OpenSearch/pull/7165 present in the main branch are not incorporated in 2.8. To reconcile this, modifications related to ImmutableMap and ImmutableOpenMap were undone.

Additionally, only partial changes from https://github.com/opensearch-project/OpenSearch/commit/1e08b5a075fa6018be6c0af959b2d638c2743d56 were applied to 2.8. To address compiler failures, OpenSearchRejectedExecutionException was relocated from the org.opensearch.common.util.concurrent package to the org.opensearch.core.concurrency package.

Tests completed:
- Successful Gradle build

Signed-off-by: Kaituo Li <kaituo@amazon.com>